# barlow-twins-cifar10

./: README.md  gitignore  pyproject.toml
scripts/: evaluate.py  pretrain.py
src/: data.py  loss.py  model.py
src/barlow_twins_impl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
